--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <style>
+@font-face {
+    font-family: '메이플스토리';
+    src: url('images/MaplestoryBold.ttf');
+}
+
             body {
                 margin: 0;
                 padding: 0;
